# verifypn

./: .bzrignore  .clang-format  .clang-tidy  CMakeLists.txt  LOG.txt  ParsingTime.sh  README.mkd  VerifyPN.cpp  correctness.sh  format.sh  log.txt  makefile.linux64  makefile.osx32  makefile.osx64  makefile.win32  makefile.win64  password.txt  reductivness.sh  rules.mk  runLTS.osx64.sh  runLTS.sh  runLTSmin.sh  runLTSminMC.linux64.sh  runLTSminMC.osx64.sh  solution.gcf  stopwatch.h  test.sh  test_2  test_placebounds.xml  tidy.sh  verifypn-linux64  verifypn-osx64  verifypnCTL.cpp  verifypnCTL.h
CTL/: CertainZeroFPA.cpp  CertainZeroFPA.h  DependencyGraph.cpp  DependencyGraph.h  FixedPointAlgorithm.h  LocalFPA.cpp  LocalFPA.h  OnTheFlyDG.cpp  OnTheFlyDG.h  circledetector.cpp  circledetector.h  configuration.cpp  configuration.h  czero_fp_algorithm.cpp  czero_fp_algorithm.h  dgengine.cpp  dgengine.h  edge.cpp  edge.h  edgepicker.cpp  edgepicker.h  fp_algorithm.cpp  fp_algorithm.h  global_fp_algorithm.cpp  global_fp_algorithm.h  local_fp_algorithm.cpp  local_fp_algorithm.h  marking.cpp  marking.h
src/FCTL/: CMakeLists.txt  FCTLEngine.cpp  FCTLResult.cpp
src/FCTL/Algorithm/: CMakeLists.txt  FCertainZeroFPA.cpp  FeatFixedPointAlgorithm.cpp  fczero-old.cpp
src/FCTL/DependencyGraph/: CMakeLists.txt  FConfiguration.cpp
src/FCTL/FeaturedPN/: CMakeLists.txt  EnumeratingPetriNetBuilder.cpp  PetriNetSerializer.cpp
src/FCTL/PetriNets/: CMakeLists.txt  FOnTheFlyDG.cpp
src/FCTL/SearchStrategy/: CMakeLists.txt  HeuristicSearch.cpp  RDFSSearch.cpp  SearchStrategy.cpp
(+8330 files in other folders)
